2018 | day 3 | read input

--- a/2018/03/Makefile
+++ b/2018/03/Makefile
@@ -2,13 +2,13 @@ run: main
 	cat input.txt | ./main
 
 solutions: Solutions.hs 
-	stack ghc Solutions.hs
+	ghc Solutions.hs
 
 main: solutions
-	stack ghc main.hs 
+	ghc main.hs 
 
 test: solutions
-	stack ghc tests.hs
+	ghc tests.hs
 	cat input_test.txt | ./tests
 
 clear:
