--- a/2018/XX_template/Makefile
+++ b/2018/XX_template/Makefile
@@ -2,14 +2,14 @@ run: main
 	cat input.txt | ./main
 
 solutions: Solutions.hs 
-	stack ghc Solutions.hs
+	ghc Solutions.hs
 
 main: solutions
-	stack ghc main.hs 
+	ghc main.hs 
 
 test: solutions
-	stack ghc tests.hs
-	./tests
+	ghc tests.hs
+	cat input_test.txt | ./tests
 
 clear:
 	rm -f *.o *.hi Solution main tests
